# jopper

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: README.md  build-multiarch.yaml
k8s/: DEPLOYMENT_CHECKLIST.md  README.md  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml
k8s/real/: configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml
src/jopper/: __init__.py  cli.py  config.py  joplin.py  joplin_service.py  openwebui.py  state.py  sync.py
