[project]
name = "jopper"
version = "0.1.0"
description = "Synchronize Joplin notes to OpenWebUI knowledge base"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joppy>=1.0.0",
    "requests>=2.31.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[project.scripts]
jopper = "jopper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


